src/styles.scss
@use "@angular/material" as mat;

@import "./theme-config.scss";

// Foreground Elements
// Light Theme Text
$dark-primary-text: #000000;
$dark-accent-text: rgba($dark-primary-text, 0.54);
$dark-disabled-text: rgba($dark-primary-text, 0.38);
$dark-focused: rgba($dark-primary-text, 0.12);

// Dark Theme text
$light-primary-text: #ffffffe3;
$light-accent-text: rgba($light-primary-text, 0.7);
$light-disabled-text: rgba($light-primary-text, 0.5);
$light-focused: rgba($light-primary-text, 0.12);

/* #region */ //foreground theming
$mat-light-theme-foreground: (
  base:          black,
  disabled:      $dark-disabled-text,
  disabled-text: $dark-disabled-text,
  elevation:     black,
  hint-text:     $dark-disabled-text,
  accent-text:   $dark-accent-text,
  icon:          $dark-accent-text,
  text:          $dark-primary-text,
  slider-min:        $dark-primary-text,
  slider-off:        rgba($dark-primary-text, 0.26),
  slider-off-active: $dark-disabled-text,
);
$mat-dark-theme-foreground: (
  base:          $light-primary-text,
  disabled:      $light-disabled-text,
  disabled-text: $light-disabled-text,
  elevation:     black,
  hint-text:     $light-disabled-text,
  accent-text:   $light-accent-text,
  icon:          $light-primary-text,
  text:          $light-primary-text,
  slider-min:        $light-primary-text,
  slider-off:        rgba($light-primary-text, 0.3),
  slider-off-active: rgba($light-primary-text, 0.3),
);
/* #endregion */

// Background config
// Light bg
$light-background:    #ffffff;
$light-bg-darker-5:   darken($light-background, 5%);
$light-bg-darker-10:  darken($light-background, 10%);
$light-bg-darker-20:  darken($light-background, 20%);
$light-bg-darker-30:  darken($light-background, 30%);
$light-bg-lighter-5:  lighten($light-background, 5%);
$dark-bg-tooltip:     lighten(#272727, 20%);
$dark-bg-alpha-4:     rgba(#272727, 0.04);
$dark-bg-alpha-12:    rgba(#272727, 0.12);
// Dark bg
$dark-background:     #272727;
$dark-bg-lighter-5:   lighten($dark-background, 5%);
$dark-bg-lighter-10:  lighten($dark-background, 10%);
$dark-bg-lighter-20:  lighten($dark-background, 20%);
$dark-bg-lighter-30:  lighten($dark-background, 30%);
$light-bg-alpha-4:    rgba(#ffffff, 0.04);
$light-bg-alpha-12:   rgba(#ffffff, 0.12);

/* #region */ //theming the background
$mat-light-theme-background: (
  background:           $light-background,
  status-bar:           $light-bg-darker-20,
  card:                 $light-bg-lighter-5,
  dialog:               $light-bg-lighter-5,
  tooltip:              $dark-bg-tooltip,
  raised-button:        $light-bg-lighter-5,
  focused-button:       $dark-focused,
  selected-button:      $light-bg-darker-20,
  unselected-chip:      $light-bg-darker-10,
  disabled-list-option: $light-bg-darker-10,
);
$mat-dark-theme-background: (
  background:           $dark-background,
  status-bar:           $dark-bg-lighter-20,
  hover:                $light-bg-alpha-4,
  card:                 $dark-bg-lighter-5,
  dialog:               $dark-bg-lighter-5,
  tooltip:              $dark-bg-lighter-20,
  raised-button:        $dark-bg-lighter-5,
  focused-button:       $light-focused,
  selected-button:      $dark-bg-lighter-20,
  unselected-chip:      $dark-bg-lighter-20,
  disabled-list-option: $dark-bg-lighter-10,
);
/* #endregion */

// Theme Config
body {
  //primary
  --primary-color: #75afff;
  --primary-lighter-color: #cce1ff;
  --primary-darker-color: #1a79ff;
  //accent
  --accent-color: #ffc95f;
  --accent-lighter-color: #ffefcf;
  --accent-darker-color: #f3a022;
  //warn
  --warn-color: #ff0000;
  --warn-lighter-color: #ffb3b3;
  --warn-darker-color: #cc0000;
}

/* #region */ // initialising primary, accent and warn palletes
$mat-primary: (
  main: var(--primary-color),
  lighter: var(--primary-lighter-color),
  darker: var(--primary-darker-color),
  200: #75afff,
  contrast : (
    main: $dark-primary-text,
    lighter: $dark-primary-text,
    darker: $dark-primary-text,
  )
);
$mat-accent: (
  main: var(--accent-color),
  lighter: var(--accent-lighter-color),
  darker: var(--accent-darker-color),
  200: #ffc95f,
  contrast : (
    main: $dark-primary-text,
    lighter: $dark-primary-text,
    darker: $dark-primary-text,
  )
);
$mat-warn: (
  main: var(--warn-color),
  lighter: var(--warn-lighter-color),
  darker: var(--warn-darker-color),
  200: #ff0000, // For slide toggle,
  contrast : (
    main: $light-primary-text,
    lighter: $dark-primary-text,
    darker: $light-primary-text,
  )
);
/* #endregion */
$theme-primary: mat.define-palette($mat-primary, main, lighter, darker);
$theme-accent: mat.define-palette($mat-accent, main, lighter, darker);
$theme-warn: mat.define-palette($mat-warn, main, lighter, darker);

//theme init
$light-theme: (
  primary: $theme-primary,
  accent: $theme-accent,
  warn: $theme-warn,
  is-dark: false,
  foreground: $mat-light-theme-foreground,
  background: $mat-light-theme-background,
);
$dark-theme: (
  primary: $theme-primary,
  accent: $theme-accent,
  warn: $theme-warn,
  is-dark: true,
  foreground: $mat-dark-theme-foreground,
  background: $mat-dark-theme-background,
);

*, *::after, *::before {
  margin: 0px;
  padding: 0px;
  box-sizing: border-box;
}
html, body {
  height: 100%;
}
body {
  font-family: Roboto, sans-serif;
  @include mat.button-theme($light-theme);
  @include mat.ripple-theme($light-theme);
  @include mat.toolbar-theme($light-theme);
  @include mat.progress-spinner-theme($light-theme);
  @include mat.tooltip-theme($light-theme);
  @include mat.card-theme($light-theme);
  @include mat.tabs-theme($light-theme);
  @include mat.slider-theme($light-theme);
  width: 100vw;
  max-width: 39.6875cm;
  display: block;
  margin-inline: auto;
  mat-spinner {
    will-change: stroke-dashoffset;
  }
  blockquote {
    display: block;
    margin: 0 auto;
    font-size: 1.6rem;
    width: clamp(250px, 70vw, 1000px);
    line-height: 2.2ch;
    text-align: center;
    margin-block: 1em;
    border: 1px solid;
    padding-block: 1rem;
    padding-inline: 2rem;
    q {
      width: inherit;
      font-family: 'Parisienne', cursive;
    }
    span {
      font-size: 0.7em;
      display: inherit;
      margin-left: auto;
      text-align: right
    }
  }
  .lightTheme {
    @include mat.sidenav-theme($light-theme);
    background-color: mat.get-color-from-palette($mat-light-theme-background, 'background');
    color: mat.get-color-from-palette($mat-light-theme-foreground, 'text');
    svg {
      stroke: mat.get-color-from-palette($mat-light-theme-foreground, 'text');
    }
  }
  .darkTheme {
    @include mat.sidenav-color($dark-theme);
    @include mat.card-color($dark-theme);
    @include mat.tabs-color($dark-theme);
    @include mat.slider-color($dark-theme);
    background-color: mat.get-color-from-palette($mat-dark-theme-background, 'background');
    color: mat.get-color-from-palette($mat-dark-theme-foreground, 'text');
    svg {
      stroke: mat.get-color-from-palette($mat-dark-theme-foreground, 'text');
    }
  }
  .mat-elevation-z3 {@include mat.elevation(3)}
  .mat-elevation-z4 {@include mat.elevation(4)}
  .mat-elevation-z5 {@include mat.elevation(5)}
  .mat-elevation-z6 {@include mat.elevation(6)}
  .mat-elevation-z7 {@include mat.elevation(7)}
  .mat-elevation-z8 {@include mat.elevation(8)}
  .mat-elevation-z9 {@include mat.elevation(9)}
  div.cdk-overlay-container {
    mat-tooltip-component {
      div.mat-tooltip {
        font-size: 0.8rem;
        margin: 0px 16px;
        padding: 5px 10px;
      }
    }
  }
}

div.wrapper {
  min-height: 100vh;
  max-height: 100vh;
  width: inherit;
  overflow: hidden auto;
}

canvas { display: block; }

